--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -8,7 +8,7 @@
 {% block page_content %}
 <div class="more_buttons">
 	<div class="more_row">
-<!--	<a href="{% url reports:search %}" class="mycelium_btn more_button reports_btn">
+<!--	<a href="{% url spreadsheets:search %}" class="mycelium_btn more_button spreadsheets_btn">
 		<div class="button_title">Spreadsheets</div>
 		<div class="button_description">Create and download custom spreadsheets</div>
 	</a>
