--- a/mycelium/apps/spreadsheets/templates/spreadsheets/base.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/base.html
@@ -1,4 +1,4 @@
 {% extends "mycelium_base.html" %}
 {% block css %}{{block.super}}
-	{% css "css/reports.css" %}
+	{% css "css/spreadsheets.css" %}
 {% endblock %}
