--- a/mycelium/apps/spreadsheets/templates/spreadsheets/detail_donors.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/detail_donors.html
@@ -1,23 +1,30 @@
-{% extends "reports/base.html" %}
+{% extends "spreadsheets/base.html" %}
 {% block title %}Reports - Unsaved Report{% endblock %}
 {% load humanize %}
-{% block breadcrumb_links %}<a href="{% url reports:search %}">Back to All Spreadsheets</a>{% endblock %}
+{% block breadcrumb_links %}<a href="{% url spreadsheets:search %}">Back to All Spreadsheets</a>{% endblock %}
 {% block page_content %}
 <div class="right_actions">
 	<a href="#" class="mycelium_btn mycelium_grey">Saved</a>
 </div>
-<div class="title"><img src="{% media_url "images/icon-spreadsheet-32.png" %}"/>Active Email Subscriptions</div>
+<div class="title"><img src="{% media_url "images/icon-spreadsheet-32.png" %}"/>2010 Monthly Donors</div>
 
 <div class="setup_phrase">Include people who match <select><option selected>all</option><option>any</option></select> of the following rules:</div>
 <div class="criteria_list">
 	<div class="rule">
-		<select><option selected>has any tag that</option><option>has a general tag that</option><option>has a volunteer tag that</option><option>has a donor tag that</option><option>volunteer status</option><option>last volunteer shift</option><option >last donation</option></select>
+		<select><option>has any tag that</option><option>has a general tag that</option><option>has a volunteer tag that</option><option>has a donor tag that</option><option>volunteer status</option><option>last volunteer shift</option><option selected>last donation</option></select>
+
+		<select><option>is</option><option>is before</option><option selected>is after</option></select>
+
+		<input type="text" class="datepicker" value="12/31/2009" />
+	</div>
+			
+	<div class="rule">
+		<select><option>has any tag that</option><option>has a general tag that</option><option>has a volunteer tag that</option><option selected>has a donor tag that</option><option>volunteer status</option><option>last volunteer shift</option><option>last donation</option></select>
 
 		<select><option selected>is</option><option>is before</option><option>is after</option></select>
 
-		<input type="text" class="" value="email subscriber" />
+		<input type="text" class="" value="monthly" />
 	</div>
-			
 	<div class="new_criterium">
 		<a href="#" class="mycelium_btn mycelium_grey mycelium_small_btn">Add new criteria</a>
 	</div>
@@ -30,7 +37,7 @@
 	<div class="column"><input type="checkbox" checked id="id_last_name"><label for="id_last_name">Last Name </label></div>
 	<div class="column"><input type="checkbox" checked id="id_email"><label for="id_email_name">Email</label></div>
 	<div class="column"><input type="checkbox" id="id_primary_address"><label for="id_primary_address">Main Address</label></div>
-	<div class="column"><input type="checkbox" checked id="id_phone"><label for="id_phone">Phone</label></div>
+	<div class="column"><input type="checkbox" id="id_phone"><label for="id_phone">Phone</label></div>
 	<div class="column"><input type="checkbox" id="id_last_volunteer"><label for="id_last_volunteer">Last Volunteer Shift</label></div>
 	<div class="column"><input type="checkbox" id="id_no_volunteer_hrs_month"><label for="id_no_volunteer_hrs_month">Number of volunteer hours this month</label></div>
 	<div class="column"><input type="checkbox" id="id_no_volunteer_hrs_year"><label for="id_no_volunteer_hrs_year">Number of volunteer hours this year</label></div>	
@@ -44,7 +51,6 @@
 		<th>First Name</th>
 		<th>Last Name</th>
 		<th>Email</th>
-		<th>Phone</th>
 	</tr>
 	{% with people|slice:"5" as five_people %}
 	{% for p in five_people %}
@@ -53,7 +59,6 @@
 		<td>{{p.first_name}}</td>
 		<td>{{p.last_name}}</td>
 		<td>{{p.primary_email}}</td>
-		<td>{{p.primary_phone_number}}</td>
 	</tr>
 	{% endfor %}
 	{% endwith %}
@@ -61,7 +66,7 @@
 	{% if remainder > 0 %}
 	<tr>
 		<td colspan="9999" class="remainder_count">
-			and {{1249|intcomma}} more people.
+			and {{157|intcomma}} more people.
 		</td>
 	</tr>
 	{% endif %}
