--- a/mycelium/apps/spreadsheets/templates/spreadsheets/detail_volunteer.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/detail_volunteer.html
@@ -1,35 +1,34 @@
-{% extends "reports/base.html" %}
+{% extends "spreadsheets/base.html" %}
 {% block title %}Reports - Unsaved Report{% endblock %}
 {% load humanize %}
-{% block breadcrumb_links %}<a href="{% url reports:search %}">Back to All Spreadsheets</a>{% endblock %}
+{% block breadcrumb_links %}<a href="{% url spreadsheets:search %}">Back to All Spreadsheets</a>{% endblock %}
 {% block page_content %}
 <div class="right_actions">
 	<a href="#" class="mycelium_btn mycelium_grey">Saved</a>
 </div>
-<div class="title"><img src="{% media_url "images/icon-spreadsheet-32.png" %}"/>2010 Monthly Donors</div>
+<div class="title"><img src="{% media_url "images/icon-spreadsheet-32.png" %}"/>Thursday Volunteer List</div>
 
 <div class="setup_phrase">Include people who match <select><option selected>all</option><option>any</option></select> of the following rules:</div>
 <div class="criteria_list">
 	<div class="rule">
-		<select><option>has any tag that</option><option>has a general tag that</option><option>has a volunteer tag that</option><option>has a donor tag that</option><option>volunteer status</option><option>last volunteer shift</option><option selected>last donation</option></select>
+		<select><option>has any tag that</option><option>has a general tag that</option><option>has a volunteer tag that</option><option>has a donor tag that</option><option>volunteer status</option><option selected>last volunteer shift</option><option>last donation</option></select>
 
 		<select><option>is</option><option>is before</option><option selected>is after</option></select>
 
-		<input type="text" class="datepicker" value="12/31/2009" />
+		<input type="text" class="datepicker" value="10/31/2010" />
 	</div>
 			
 	<div class="rule">
-		<select><option>has any tag that</option><option>has a general tag that</option><option>has a volunteer tag that</option><option selected>has a donor tag that</option><option>volunteer status</option><option>last volunteer shift</option><option>last donation</option></select>
+		<select><option>has any tag that</option><option>has a general tag that</option><option selected>has a volunteer tag that</option><option>has a donor tag that</option><option>volunteer status</option><option>last volunteer shift</option><option>last donation</option></select>
 
 		<select><option selected>is</option><option>is before</option><option>is after</option></select>
 
-		<input type="text" class="" value="monthly" />
+		<input type="text" class="" value="thursday night" />
 	</div>
 	<div class="new_criterium">
 		<a href="#" class="mycelium_btn mycelium_grey mycelium_small_btn">Add new criteria</a>
 	</div>
 </div>
-
 
 <div class="setup_phrase">Include these columns:</div>
 <div class="column_list">
@@ -40,7 +39,7 @@
 	<div class="column"><input type="checkbox" id="id_phone"><label for="id_phone">Phone</label></div>
 	<div class="column"><input type="checkbox" id="id_last_volunteer"><label for="id_last_volunteer">Last Volunteer Shift</label></div>
 	<div class="column"><input type="checkbox" id="id_no_volunteer_hrs_month"><label for="id_no_volunteer_hrs_month">Number of volunteer hours this month</label></div>
-	<div class="column"><input type="checkbox" id="id_no_volunteer_hrs_year"><label for="id_no_volunteer_hrs_year">Number of volunteer hours this year</label></div>	
+	<div class="column"><input type="checkbox" checked id="id_no_volunteer_hrs_year"><label for="id_no_volunteer_hrs_year">Number of volunteer hours this year</label></div>	
 </div>
 
 <div class="sample_results">
@@ -51,6 +50,7 @@
 		<th>First Name</th>
 		<th>Last Name</th>
 		<th>Email</th>
+		<th>Number of volunteer hours this year</th>
 	</tr>
 	{% with people|slice:"5" as five_people %}
 	{% for p in five_people %}
@@ -59,6 +59,7 @@
 		<td>{{p.first_name}}</td>
 		<td>{{p.last_name}}</td>
 		<td>{{p.primary_email}}</td>
+		<td>{{hours|random}}</td>
 	</tr>
 	{% endfor %}
 	{% endwith %}
@@ -66,7 +67,7 @@
 	{% if remainder > 0 %}
 	<tr>
 		<td colspan="9999" class="remainder_count">
-			and {{157|intcomma}} more people.
+			and {{48|intcomma}} more people.
 		</td>
 	</tr>
 	{% endif %}
