--- a/media/css/more.css
+++ b/media/css/more.css
@@ -49,7 +49,7 @@
 	background-image: url("../images/icon-my-account-100.png");
 	background-position: 13px 7px;
 }
-.reports_btn {
+.spreadsheets_btn {
 	background-image: url("../images/icon-spreadsheet-76.png");
 	background-position: 24px 10px;	
 }
