--- a/media/css/spreadsheets.css
+++ b/media/css/spreadsheets.css
@@ -99,17 +99,17 @@ input:focus {
 	background-repeat: no-repeat;
 }
 
-.report_list {
+.spreadsheet_list {
 	padding: 20px 10px;
 }
-table.report_results {
+table.spreadsheet_results {
 	width: 100%;
 	margin-top: 10px;
 }
-table.report_results td {
+table.spreadsheet_results td {
 	padding: 2px;
 }
-table.report_results .view_results, table.report_results .download_csv {
+table.spreadsheet_results .view_results, table.spreadsheet_results .download_csv {
 	width: 10%;
 }
 
