--- a/mycelium/apps/spreadsheets/templates/spreadsheets/search.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/search.html
@@ -3,30 +3,29 @@
 {% load humanize %}
 {% block breadcrumb %}{% endblock %}
 {% block page_content %}
-<coming_soon>We're not quite done with spreadsheets yet, but they'll be ready to go soon!</coming_soon>
-<div class="title"><img src="{% media_url "images/icon-spreadsheet-32.png" %}" />Saved Spreadsheets</div>
+<div class="title"><img src="{% media_url "images/icon-spreadsheet-32.png" %}" />Spreadsheets</div>
 
-<div class="report_list">
-	<a href="{% url spreadsheets:new_report %}" class="mycelium_btn">New Spreadsheet</a>
-	<table class="report_results">
+<div class="spreadsheet_list">
+	<a href="{% url spreadsheets:new_spreadsheet %}" class="mycelium_btn">New Spreadsheet</a>
+	<table class="spreadsheet_results">
 		{% for r in all_spreadsheets %}
 		<tr>
 		</tr>
 		{% endfor %}
 		<tr>
-			<td class="name"		><a href="{% url spreadsheets:report_detail 1 %}" >Thursday Volunteer List</a></td>
+			<td class="name"		><a href="{% url spreadsheets:spreadsheet_detail 1 %}" >Thursday Volunteer List</a></td>
 			<td class="count"		>53 people</td>
 			<td class="view_results"><a href="#" class="mycelium_btn mycelium_small_btn">View Results</a></td>
 			<td class="download_csv"><a href="#" class="mycelium_btn mycelium_small_btn">Download</a></td>
 		</tr>
 		<tr>
-			<td class="name"		><a href="{% url spreadsheets:report_detail 2 %}" >2010 Monthly Donors</a></td>
+			<td class="name"		><a href="{% url spreadsheets:spreadsheet_detail 2 %}" >2010 Monthly Donors</a></td>
 			<td class="count"		class="name"		>162 people</td>
 			<td class="view_results"class="name"		><a href="#" class="mycelium_btn mycelium_small_btn">View Results</a></td>
 			<td class="download_csv"class="name"		><a href="#" class="mycelium_btn mycelium_small_btn">Download</a></td>
 		</tr>
 		<tr>
-			<td class="name"		><a href="{% url spreadsheets:report_detail 3 %}" >Active Email Subscriptions</a></td>
+			<td class="name"		><a href="{% url spreadsheets:spreadsheet_detail 3 %}" >Active Email Subscriptions</a></td>
 			<td class="count"		class="name"		>1,354 people</td>
 			<td class="view_results"class="name"		><a href="#" class="mycelium_btn mycelium_small_btn">View Results</a></td>
 			<td class="download_csv"class="name"		><a href="#" class="mycelium_btn mycelium_small_btn">Download</a></td>
