--- a/mycelium/apps/spreadsheets/templates/spreadsheets/_search_result_row_spreadsheet.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/_search_result_row_spreadsheet.html
@@ -1,5 +1,5 @@
-<tr>
-	<td class="name"		><a href="{% url spreadsheets:spreadsheet obj.pk %}" >{{obj.name}}</a></td>
-	<td class="count"		>{{obj.num_rows}} people</td>
-	<td class="download"	><a href="{% url spreadsheets:download "csv" obj.pk %}" class="mycelium_btn mycelium_small_btn">Download CSV</a></td>
+<tr class="result_row person_row striped_row spreadsheet_row">
+	<td class="name		highlightable"	><a href="{% url spreadsheets:spreadsheet obj.pk %}" >{{obj.name}}</a></td>
+	<td class="count				 "	>{{obj.num_rows}} people</td>
+	<td class="Download 			 "	><a href="{% url spreadsheets:download "csv" obj.pk %}" class="mycelium_btn mycelium_small_btn">Download CSV</a></td>
 </tr>
