tests for basic spreadsheet create, edit, search passing,  upgraded selenium version

--- a/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
@@ -21,7 +21,7 @@ $(function(){
 
 {% endblock %}
 
-{% block breadcrumb_links %}<a href="{% url spreadsheets:search %}"  >Back to Spreadsheets</a>{% endblock %}
+{% block breadcrumb_links %}<a href="{% url spreadsheets:search %}" class="back_to_search_btn" >Back to Spreadsheets</a>{% endblock %}
 {% block page_content %}
 <form action="{% url spreadsheets:save_basic_info spreadsheet.pk %}" class="edit_mode_off" id="basic_info_form" method="POST">{% csrf_token %}
 {% with "Edit Spreadsheet" as edit_label %}
