--- a/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
@@ -30,9 +30,22 @@ $(function(){
 
 <div class="basic_info">
 	{% generic_editable_field form.name %}
+	<span class="group_and_template">
+	<label class="section">Group</label>
 	{% generic_editable_field form.group %}
+	<label class="section">Template</label>
 	{% generic_editable_field form.spreadsheet_template %}
-	{% generic_editable_field form.default_filetype %}
+	</span>
+</div>
+<div class="email_quick_copy">
+
+</div>
+<div class="file_type">
+	<section_header>File Type</section_header>
+
+{# 	{% generic_editable_field form.default_filetype %} #}
+	<label for="id_default_filetype_0"><input type="radio" id="id_default_filetype_0" value="CSV" name="default_filetype" /> CSV</label>
+	<label for="id_default_filetype_1"><input checked="checked" type="radio" id="id_default_filetype_1" value="EXCEL" name="default_filetype" /> Microsoft Excel</label>
 
 </div>
 <div>
