--- a/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
@@ -30,28 +30,43 @@ $(function(){
 
 <div class="basic_info">
 	{% generic_editable_field form.name %}
+	<div class="detail_header">Spreadsheet Contents</div>
 	<span class="group_and_template">
 	<label class="section">Group</label>
 	{% generic_editable_field form.group %}
 	<label class="section">Template</label>
 	{% generic_editable_field form.spreadsheet_template %}
 	</span>
-</div>
-<div class="email_quick_copy">
+	<div class="email_quick_copy">
 
-</div>
-<div class="file_type">
-	<section_header>File Type</section_header>
-
-{# 	{% generic_editable_field form.default_filetype %} #}
-	<label for="id_default_filetype_0"><input type="radio" id="id_default_filetype_0" value="CSV" name="default_filetype" /> CSV</label>
-	<label for="id_default_filetype_1"><input checked="checked" type="radio" id="id_default_filetype_1" value="EXCEL" name="default_filetype" /> Microsoft Excel</label>
-
-</div>
-<div>
-	<a href="#" class="mycelium_btn">Download Spreadsheet</a>
+	</div>
+	<div class="file_type">
+		<div class="detail_header">File Type</div>
+		<div class="file_type_option">
+			<input type="radio" id="id_default_filetype_0" value="CSV" name="default_filetype" />
+			<label for="id_default_filetype_0">
+				<span class="option_name">CSV</span>
+				<span class="option_description">CSV (or comma separated value) files can be opened in nearly all spreadsheet programs, and imported by virtually all databases. If you're not sure, choose CSV.</span>
+			</label>
+		</div>
+		
+		<div class="file_type_option">
+			<input checked="checked" type="radio" id="id_default_filetype_1" value="EXCEL" name="default_filetype" />
+			<label for="id_default_filetype_1">
+				<span class="option_name">Excel</span>
+				<span class="option_description">Microsoft Excel files can be opened by a number of spreadsheet programs (like Excel and OpenOffice), and a number of databases.  If you're using Microsoft Excel, go ahead and choose this option.</span>
+			</label>
+		</div>
+	</div>
 </div>
 </form>
+
+<form id="download_spreadsheet_form" action="{% url spreadsheets:download %}" method="GET" />
+<div class="download_spreadsheet_button_block">
+	<input type="hidden" name="group"/>
+	<a href="#" class="mycelium_btn download_spreadsheet_btn">Download Spreadsheet</a>
+</div>
+
 
 <div class="clearfix"></div>
 <delete_object_block>
