--- a/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
@@ -46,7 +46,7 @@ $(function(){
 			<input type="radio" id="id_default_filetype_0" value="CSV" name="default_filetype" />
 			<label for="id_default_filetype_0">
 				<span class="option_name">CSV</span>
-				<span class="option_description">CSV (or comma separated value) files can be opened in nearly all spreadsheet programs, and imported by virtually all databases. If you're not sure, choose CSV.</span>
+				<span class="option_description">CSV (comma separated value) files can be opened in nearly all spreadsheet programs, and imported by virtually all databases. If you're not sure, choose CSV.</span>
 			</label>
 		</div>
 		
@@ -54,7 +54,7 @@ $(function(){
 			<input checked="checked" type="radio" id="id_default_filetype_1" value="EXCEL" name="default_filetype" />
 			<label for="id_default_filetype_1">
 				<span class="option_name">Excel</span>
-				<span class="option_description">Microsoft Excel files can be opened by a number of spreadsheet programs (like Excel and OpenOffice), and a number of databases.  If you're using Microsoft Excel, go ahead and choose this option.</span>
+				<span class="option_description">Microsoft Excel files can be opened by a number of spreadsheet programs (like Excel and OpenOffice), and many databases.  If you're using Microsoft Excel, go ahead and choose this option.</span>
 			</label>
 		</div>
 	</div>
