--- a/media/css/spreadsheets.css
+++ b/media/css/spreadsheets.css
@@ -127,24 +127,39 @@ td.remainder_count {
 	padding-top: 10px;
 	width: 90%;
 }
+.selects_with_descriptions {
+	display: block;
+	width: 100%;
+	overflow: auto;
+}
 .file_type_option {
 	display: block;
 	padding: 8px;
-	clear: both;
-	width: 60%;
+	width: 40%;
+	margin: 4px 2% 4px 2%;
 	overflow: auto;
-
+	float: left;
+	min-height: 3em;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;	
+	border: 1px solid #FFF;
+}
+.file_type_option.selected {
+	background-color: #EEE;
+	border-color: #DDD;
 }
 .file_type_option input, .edit_mode_on .file_type_option input {
 	float: left;
 	display: block;
-	margin: 5px;
+	margin: 5px 2% 5px 2%;
+	width: 6%;
 
 }
 .file_type_option label {
 	display: block;
 	float: left;
-	width: 80%;
+	width: 90%;
 }
 .file_type_option .option_name {
 	font-size: 20px;
@@ -155,4 +170,22 @@ td.remainder_count {
 	color: #888;
 	display: block;	
 	font-size: 14px;
+}
+
+#email_list_area {
+	width: 90%;
+	height: 6em;
+	border: 1px solid #DDD;
+	font-size: 14px;
+	color: 999;
+	margin: 2px 0px 0px 5px;
+}
+.email_quick_copy {
+	
+}
+.detail_description {
+	font-size: 14px;
+	display: block;
+	padding: 4px 5px 6px 5px;
+	color: #777;
 }
