--- a/mycelium/apps/spreadsheets/templates/spreadsheets/_email_list.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/_email_list.html
@@ -1,1 +1,1 @@
-{% for m in spreadsheet.members  %}{% if m.email %}{{m.first_name}} {{m.last_name}} &lt;{{m.email}}&gt;{% if not forloop.last %},{% endif %} {% endif %}{% endfor %}
+<textarea id="email_list_area">{% for m in spreadsheet.members  %}{% if m.email %}{{m.first_name}} {{m.last_name}} &lt;{{m.email}}&gt;{% if not forloop.last %},{% endif %} {% endif %}{% endfor %}</textarea>
