spreadsheets for the other types work. data import might not, but it's fixable :)

--- a/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
@@ -40,8 +40,8 @@ $(function(){
 		<span class="generic_editable_field selects_with_descriptions" id="container_id_spreadsheet_template">
 			<label class="section">Template:</label>
 			<span class="view_field file_type_option">
-				<span class="option_name">{{form.instance.spreadsheet_template_obj.name}}</span>
-				<span class="option_description">{{form.instance.spreadsheet_template_obj.description}}</span>
+				<span class="option_name">{{form.instance.template_obj.name}}</span>
+				<span class="option_description">{{form.instance.template_obj.description}}</span>
 			</span>
 			<span class="edit_field">
 				{% for t in spreadsheet_templates  %}
