--- a/mycelium/apps/spreadsheets/templates/spreadsheets/_group_count.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/_group_count.html
@@ -1,1 +1,1 @@
-<span id="id_group_count">{{members.count}} people</span>
+<span id="id_group_count_with_label"><span class="number">{{members.count}}</span> people</span>
