all spreadsheet tests pass

--- a/mycelium/apps/dashboard/templates/dashboard/_goodcloud_news.html
+++ b/mycelium/apps/dashboard/templates/dashboard/_goodcloud_news.html
@@ -1,3 +1,4 @@
-<column_content class="plain_text">
+<column_content class="plain_text news">
+<span class="date">June 6, 2011 - </span>
 GoodCloud has launched!  We're open for business, and ready to get started making life better for small nonprofits. Tell you friends!
 </column_content>
