new green background

--- a/media/css/dashboard.css
+++ b/media/css/dashboard.css
@@ -129,3 +129,6 @@ column_content.completed_goodcloud_challenges {
 	background-position: 6px 0px;
 	
 }
+column_content.news .date {
+	font-weight: bold;
+}
