--- a/mycelium/apps/dashboard/templates/dashboard/_goodcloud_news.html
+++ b/mycelium/apps/dashboard/templates/dashboard/_goodcloud_news.html
@@ -1,4 +1,10 @@
 <column_content class="plain_text news">
-<span class="date">June 6, 2011 - </span>
-GoodCloud has launched!  We're open for business, and ready to get started making life better for small nonprofits. Tell you friends!
+<news_story>
+<span class="date">June 16, 2011</span>
+<span class="story_body">Spreadsheets have arrived! You can now easily create and download spreadsheets of your data, using the spreadsheet link up top.</span>
+</news_story>
+<news_story>
+<span class="date">June 6, 2011</span>
+<span class="story_body">GoodCloud has launched!  We're open for business, and ready to get started making life better for small nonprofits. Tell your friends!</span>
+</news_story>
 </column_content>
